force-app/main/default/objects/AnnualGiftHistory__c/AnnualGiftHistory__c.object-meta.xml
<CustomObject>
    <label>Annual Gift History</label>
    <nameField>
        <displayFormat>AGH-{000000000}</displayFormat>
        <label>AnnualGiftHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Gift Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>