force-app/main/default/objects/AnnualGiftHistory__c/fields/CommittedAmount__c.field-meta.xml
<CustomField>
    <fullName>CommittedAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Committed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>