force-app/main/default/objects/AnnualGiftHistory__c/fields/HardCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>HardCreditAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hard Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>