force-app/main/default/objects/AnnualGiftHistory__c/fields/NumberOfGifts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfGifts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Gifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>