force-app/main/default/objects/AnnualGiftHistory__c/fields/PledgedAmount__c.field-meta.xml
<CustomField>
    <fullName>PledgedAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pledged Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>