force-app/main/default/objects/AnnualGiftHistory__c/fields/ReceivedAmount__c.field-meta.xml
<CustomField>
    <fullName>ReceivedAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>