force-app/main/default/objects/AnnualGiftHistory__c/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>UniqueId</label>
    <length>22</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>