force-app/main/default/objects/AnnualGiftHistory__c/fields/WrittenOffAmount__c.field-meta.xml
<CustomField>
    <fullName>WrittenOffAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Written Off Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>